# stork-lang

./: .gitignore  Cargo.toml  github_discussion_reflection.md
examples/: example.rs
stork-script/: Cargo.toml
stork-script-bevy/: Cargo.toml
stork-script-bevy/src/: lib.rs  stork_std.rs  stork_value.rs  vm_module_index.rs
stork-script-bevy/src/passes/: component_id_init.rs  system_init.rs  tree_walker.rs
stork-script-bevy/tests/: simple.rs
stork-script-core/: Cargo.toml
stork-script-core/src/: hir.rs  lib.rs
stork-script-core/src/ast/: ast.rs  test.rs
stork-script-core/src/bevy/: bevy.rs
stork-script-core/src/bevy/vm/: stork_std.rs  vm.rs  vm_module_index.rs
stork-script-core/src/bevy/vm/passes/: component_id_init.rs  system_init.rs
stork-script-core/src/cst/: cst.rs  test.rs
stork-script-core/src/module_index/: cache.rs  module_index.rs
stork-script-core/src/passes/: lower.rs  pretty_print.rs
stork-script-core/src/passes/borrow_resolution/: borrow_resolution.rs
stork-script-core/src/passes/name_resolution/: name_resolution.rs
stork-script-core/src/passes/type_resolution/: resolved_type.rs  type_resolution.rs
stork-script-core/tests/: simple.rs
stork-script-lsp/: CHANGELOG.md  Cargo.toml  README.md  package.json
stork-script-lsp/src/: main.rs  server.rs
stork-script-vscode/: CHANGELOG.md  README.md  package-lock.json  package.json  toml_to_json.js  tsconfig.tsbuildinfo
stork-script-vscode/src/: extension.ts
stork-script-vscode/syntaxes/: stork.tmLanguage.json  stork.tmLanguage.toml
stork-script/examples/: example.rs  example.strk
stork-script/src/: report.rs
stork-script/src/bevy/vm/: stork_std.rs  stork_value.rs  utils.rs
stork-script/src/bevy/vm/passes/: passes.rs  tree_walker.rs
stork-script/src/passes/: lower.rs  passes.rs  pretty_print.rs
stork-script/src/passes/borrow_resolution/: borrow_resolution.rs  resolved_effect.rs
stork-script/src/passes/name_resolution/: name_resolution.rs  name_scope.rs
stork-script/src/passes/type_resolution/: type_resolution.rs
stork-script/tests/: simple.rs
