[package]
name = "stork-script-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.89"
ariadne = "0.4.1"
bevy_ecs = { git = "https://github.com/bevyengine/bevy", features = [
    "bevy_reflect",
] }
bevy_hierarchy = { git = "https://github.com/bevyengine/bevy" }
bevy_reflect = { git = "https://github.com/bevyengine/bevy", features = [
    "functions",
] }
derive_more = "0.99.17"
expect-test = "1.5.0"
itertools = "0.12.1"
la-arena = "0.3.1"
logos = "0.14.0"
rowan = "0.15.15"
